# tfm_share

./: README.md
catkin_sim/src/seat_car_simulator/: guideGazebo.txt
catkin_sim/src/seat_car_simulator/estimator/: CMakeLists.txt  READ ME  package.xml
catkin_sim/src/seat_car_simulator/estimator/include/est_lib/: est_lib.h
catkin_sim/src/seat_car_simulator/estimator/msg/: DataInfo.msg  ErrorsInfo.msg  Gains.msg  LandmarkInfo.msg  LandmarskInfo.msg  SchedVars.msg  SendCov.msg
catkin_sim/src/seat_car_simulator/estimator/src/: .zekf_SLAMiV2.cpp.swp  DealData.py  SetLinkState.py  TimeSync.cpp  class_ekf.cpp  est_lib.cpp  parseTopics.cpp  parseTopics_ALVAR.cpp  read_SLAM.cpp  zekf.cpp  zekf_SLAM_LMI.cpp  zekf_SLAM_LMI_EKF.cpp  zekf_SLAM_LMIng.cpp  zekf_SLAMi.cpp
catkin_sim/src/seat_car_simulator/estimator/srv/: lmi_data.srv
catkin_sim/src/seat_car_simulator/lpv_control/l4planning_msgs/: CMakeLists.txt  package.xml
catkin_sim/src/seat_car_simulator/lpv_control/l4planning_msgs/msg/: CubicSpline.msg  G2Path.msg  G2Spline.msg  Trajectory.msg  TrajectorySet.msg  Waypoints.msg
catkin_sim/src/seat_car_simulator/lpv_control/l4vehicle_msgs/: CMakeLists.txt  package.xml
catkin_sim/src/seat_car_simulator/lpv_control/l4vehicle_msgs/msg/: BrakeCommand.msg  ChassisBrakePressure.msg  ChassisShiftLever.msg  ChassisSteeringAngle.msg  ChassisWheelSpeed.msg  ControllerReport.msg  ModelPredictiveControlCommand.msg  RawVehicleState.msg  SteeringPiControl.msg  SteeringTorqueCommand.msg  ThrottleCommand.msg  ThrottleReport.msg  VehicleState.msg
catkin_sim/src/seat_car_simulator/lpv_control/lpv_mpc/: CMakeLists.txt  READ ME  package.xml
catkin_sim/src/seat_car_simulator/lpv_control/lpv_mpc/launch/: GetPaths.launch  control.launch  control_cs.launch  estimator.launch  estimator_EKF.launch  read.launch
catkin_sim/src/seat_car_simulator/lpv_control/lpv_mpc/msg/: sensorState.msg
catkin_sim/src/seat_car_simulator/lpv_control/lpv_mpc/src/: controllerMain.py  plannerMain.py  plotCarTrajectory.py  stateEstimator.py  vehicleSimulator.py
catkin_sim/src/seat_car_simulator/lpv_control/lpv_mpc/src/ControllerObject/: PathFollowingLPVMPC.py
catkin_sim/src/seat_car_simulator/lpv_control/lpv_mpc/src/Others/: GatherData.py  GatherDataV2.py  PlotData.py  PublishData.py  PublishDataI.py  PublishDataNPY.py  PublishDataRef100pista.py  PublishDataRef33pista.py  TestRef.py
catkin_sim/src/seat_car_simulator/lpv_control/lpv_mpc/src/Utilities/: trackInitialization.py
catkin_sim/src/seat_car_simulator/road_description/launch/: spawn_.launch  spawn_circuit.launch  spawn_landmarks.launch  spawn_perimeter_full.launch  spawn_road.launch
catkin_sim/src/seat_car_simulator/road_description/urdf/circuits/full/: landmark_macro.xacro  trafficlights_extra_example.xacro
catkin_sim/src/seat_car_simulator/road_description/urdf/circuits/other/: circuit_L.xacro
catkin_sim/src/seat_car_simulator/road_description/urdf/trafficlight/: landmark_macro.xacro  trafficlight_macro.xacro
catkin_sim/src/seat_car_simulator/road_description/urdf/trafficlight/dae/: alvar11.dae  alvar12.dae  alvar13.dae  alvar14.dae  alvar21.dae  alvar22.dae  alvar23.dae  alvar24.dae  alvar31.dae  alvar32.dae  alvar33.dae  alvar34.dae  alvar41.dae  alvar42.dae  alvar43.dae  alvar44.dae  alvar51.dae  alvar52.dae  alvar53.dae  alvar54.dae  alvar61.dae  alvar62.dae  alvar63.dae  alvar64.dae  (+8 more)
catkin_sim/src/seat_car_simulator/seat_car_description/config/: seat_car.rviz
catkin_sim/src/seat_car_simulator/seat_car_description/launch/: spawn_car.launch
catkin_sim/src/seat_car_simulator/seat_car_description/urdf/: car.xacro
catkin_sim/src/seat_car_simulator/seat_car_description/urdf/include/: sensors.xacro
catkin_sim/src/seat_car_simulator/seat_car_gazebo/launch/: detectMarkers.launch  detectMarkersD.launch  sim.launch  simL.launch
catkin_sim/src/seat_car_simulator/seat_car_gazebo/worlds/: empty.world
real_car_code/: READ ME
real_car_code/catkin_ws/src/random_movement/launch/: random_movement.launch
(+22 files in other folders)
